--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/media/cta-drink.webp"
+                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp"
                         alt="drink">
                     <div class="card-body">
                         <p>
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm dark-green-block">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="250" src="/media/cta-food.webp"
+                    <img class="bd-placeholder-img card-img-top" width="100%" height="250" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp"
                         alt="drink">
                     <div class="card-body">
                         <p class="text-white">
@@ -72,7 +72,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/media/cta-event.webp"
+                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp"
                         alt="events">
                     <div class="card-body">
                         <p>
