fix: broken image link on live site

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <section class="jumbotron text-center dark-green-block">
     <div class="container jumbotron-content">
-        <img src="/media/logo-4.png" class="jumbotron-logo" alt="taco y tequila logo" height="100">
+        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.png" class="jumbotron-logo" alt="taco y tequila logo" height="100">
         <h1 class="logo-font text-white">Taco y Tequila</h1>
         <p class="text-white">
             Discover Mexico's culinary essence at Taco Y Tequila! Indulge in vibrant flavors, savor mouthwatering tacos,
