--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -39,7 +39,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-sm btn-red text-white">
+                                <a href="{% url 'products' %}?category=drinks_tequila,drinks_softdrinks,drinks_beers"" class="btn btn-sm btn-red text-white">
                                     Shop Drinks
                                 </a>
                             </div>
@@ -56,12 +56,11 @@
                         <p class="text-white">
                             Experience a fiesta of flavors at Taco Y Tequila! Indulge in our mouthwatering Mexican food,
                             from sizzling tacos to sizzling fajitas. Every bite is a celebration of authentic tastes
-                            that will transport you to the heart of Mexico. Join us for a culinary adventure that will
-                            leave you craving more. ¡Buen provecho!
+                            that will transport you to the heart of Mexico.
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'products' %}" class="btn btn-sm btn-outline">
+                                <a href="{% url 'products' %}?category=mealkits_mild,mealkits_medium,mealkits_hot,mealkits_veryhot" class="btn btn-sm btn-outline">
                                     Shop Food
                                 </a>
                             </div>
@@ -82,7 +81,7 @@
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a class="btn btn-sm btn-red text-white">
+                                <a href="{% url 'book_event' %}" class="btn btn-sm btn-red text-white">
                                     Book Event
                                 </a>
                             </div>
