--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container-fluid">
+    <div class="container-fluid content-container">
         <div class="row mt-5 mb-5">
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Products</h2>
