--- a/info/templates/teams/edit_team_member.html
+++ b/info/templates/teams/edit_team_member.html
@@ -23,7 +23,7 @@
 
         <div class="row">
             <div class="col-12 col-md-6">
-                <form method="POST" action="{% url 'add_team_member' %}" class="form mb-2" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'edit_team_member' teams.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.name != 'image' %}
@@ -34,7 +34,7 @@
                     {% endfor %}
                     <div class="text-right">
                         <a href="{% url 'products' %}" class="btn btn-outline rounded-0">Cancel</a>
-                        <button class="btn btn-red rounded-0" type="submit">Add Product</button>
+                        <button class="btn btn-red rounded-0" type="submit">Update Team Member</button>
                     </div>
                 </form>
             </div>
