--- a/static/css/base.css
+++ b/static/css/base.css
@@ -286,7 +286,8 @@ input[name='q']::placeholder {
 
 .allauth-form-inner-content {
 margin-top: 70px;
-margin-bottom: 50px;
+margin-bottom: 70px;
+min-height: 40vh;
 }
 
 .allauth-form-inner-content p {
@@ -308,12 +309,6 @@ margin-bottom: 50px;
 }
 
 /* Footer */
-
-.footer {
-    width: 100%;
-    margin-top: 50px;
-    bottom: 0;
-}
 
 footer > .text-small {
     font-size: 0.9rem;
@@ -341,8 +336,11 @@ footer > .form-control:focus {
 
 footer {
     background: var(--main-color);
+    position: relative;
+    left: 0;
     bottom: 0;
-    padding: 5px;
+    width: 100%;
+    margin-top: 30px;
 }
 
 /* Product Form */
@@ -441,6 +439,12 @@ footer {
 
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
+    }
+}
+
+@media (max-width: 320px) {
+    .jumbotron-content  p {
+        height: 250px;
     }
 }
 
