properly sized images

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <section class="jumbotron text-center dark-green-block">
     <div class="container jumbotron-content">
-        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.png" class="jumbotron-logo" alt="taco y tequila logo" height="100">
+        <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.webp" class="jumbotron-logo" alt="taco y tequila logo" height="100" width="100">
         <h1 class="logo-font text-white">Taco y Tequila</h1>
         <p class="text-white">
             Discover Mexico's culinary essence at Taco Y Tequila! Indulge in vibrant flavors, savor mouthwatering tacos,
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp"
+                    <img class="bd-placeholder-img card-img-top" width="250" height="250" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-drink.webp"
                         alt="drink">
                     <div class="card-body">
                         <p>
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm dark-green-block">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="250" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp"
+                    <img class="bd-placeholder-img card-img-top" width="250" height="250" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp"
                         alt="drink">
                     <div class="card-body">
                         <p class="text-white">
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm bg-red">
-                    <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp"
+                    <img class="bd-placeholder-img card-img-top" width="250" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-event.webp"
                         alt="events">
                     <div class="card-body">
                         <p>
