wave: changed font colour on product card blue text

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -51,7 +51,7 @@
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm dark-green-block">
                     <img class="bd-placeholder-img card-img-top" width="475" height="225" src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/cta-food.webp"
-                        alt="drink">
+                        alt="food">
                     <div class="card-body">
                         <p class="text-white">
                             Experience a fiesta of flavors at Taco Y Tequila! Indulge in our mouthwatering Mexican food,
