style: font on product block cards for categories

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -73,7 +73,7 @@
                                             <div class="product-card-block product-card-block-blue">
                                                 {% if product.category %}
                                                 <p class="small mt-1 mb-1">
-                                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-main mr-1 mt-1 mb-1">
+                                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="text-main mr-1 mt-1 mb-1 logo-font">
                                                         <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
                                                     </a>
                                                 </p>
