fix: fix issue with footer leaving gap at bottom

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <section class="jumbotron text-center dark-green-block">
     <div class="container jumbotron-content">
         <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-4.webp" class="jumbotron-logo" alt="taco y tequila logo" height="100" width="120">
