refactor: moved toast to js file

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -25,11 +25,11 @@
                     <p class="logo-font mb-3">Newsletter</p>
                     <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y
                         Tequila related</p>
-                    <form action="#">
+                    <form action="POST">
                         <div class="input-group mb-3">
-                            <input class="form-control" type="text" placeholder="Recipient's username"
+                            <input class="form-control" type="text" placeholder="Recipient's username" id="subscribe-email"
                                 aria-label="Recipient's username" aria-describedby="button-addon2">
-                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="button-addon2"
+                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="subscribe-submit"
                                 type="button"><i class="fas fa-paper-plane"></i></button>
                         </div>
                     </form>
