--- a/templates/base.html
+++ b/templates/base.html
@@ -156,10 +156,8 @@
 		{% include 'includes/footer.html' %}
 
 		{% block postloadjs %}
-		<!-- Toasts -->
-			<script type="text/javascript">
-				$('.toast').toast('show');
-			</script>
+		<script src="{% static 'js/toast.js' %}"></script>
+		<script src="{% static 'js/send_email.js' %}"></script>
 		{% endblock %}
 
 	</body>
