--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,8 @@
 			<script src="https://js.stripe.com/v3/"></script>
 			<!-- Sweet Alert -->
 			<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-			<!-- Scripts -->
-			<script defer src="assets/js/subscribe.js"></script>
 			<!-- EmailJS -->
-			<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+			<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 		{% endblock %}
 
 		{% block extra_js %}
@@ -153,13 +151,51 @@
 		{% block content %}
 		{% endblock %}
 
-		{% include 'includes/footer.html' %}
-
+<div class="d-flex flex-column footer-div">
+    <!-- FOOTER -->
+    <footer class="w-100 py-4 flex-shrink-0">
+        <div class="container py-4">
+            <div class="row gy-4 gx-5">
+                <div class="col-lg-4 col-md-6">
+                    <img src="https://taco-y-tequila.s3.eu-north-1.amazonaws.com/media/logo-3.webp" class="my-0 logo"
+                        height="75" width="80" alt="taco-y-tequila logo">
+                    <p class="small text-main mb-0">&copy; Copyrights. All rights reserved. Taco y Tequila</p>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <p class="logo-font mb-3">About Us</p>
+                    <ul class="list-unstyled text-main">
+                        <li><a href="{% url 'how_we_started' %}" class="text-main">How we started</a></li>
+                        <li><a href="{% url 'meet_the_team' %}" class="text-main">Meet the team</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-6">
+                    <p class="logo-font mb-3">Events</p>
+                    <ul class="list-unstyled text-main">
+                        <li><a href="{% url 'book_event' %}" class="text-main">Book an Event</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <p class="logo-font mb-3">Newsletter</p>
+                    <p class="small text-main">Sign up to our newsletter to keep up to date with everything Taco y
+                        Tequila related</p>
+                    <form action="POST">
+                        <div class="input-group mb-3">
+                            <label for="subscribe_email" aria-label="email" aria-hidden="true"></label>
+                            <input class="form-control" type="email" placeholder="Recipient's username" id="subscribe_email"
+                                aria-label="Recipient's username" aria-describedby="subscribe-submit">
+                            <button class="btn btn-red" aria-label="Subscribe to newsletter" id="subscribe-submit"
+                                type="submit"><i class="fas fa-paper-plane"></i></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
 		{% block postloadjs %}
 		<script src="{% static 'js/toast.js' %}"></script>
 		<script src="{% static 'js/send_email.js' %}"></script>
 		{% endblock %}
-
 	</body>
 
 </html>
