feat: add meta content to homepage

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
 		{% endblock %}
 
 		{% block extra_meta %}
+			<meta name="description" content="Welcome to Taco y Tequila, a Mexican restaurant that offers delicious authentic cuisine. We specialize in catering for events and also provide meal kits for delivery. Discover the rich flavors of Mexico with our diverse menu and enjoy an unforgettable dining experience.">
+			<meta name="keywords" content="Taco y Tequila, Mexican restaurant, catering, event catering, meal kits, authentic cuisine, Mexican flavors, dining experience">
+			<meta name="author" content="Gethin Davies">
 		{% endblock %}
 
 		{% block corecss %}
